tests/valid/flow/01_for.cps
for (let i: integer = 0; i < 2; i = i + 1) { continue; }