tests/invalid/flow/04_for_cond_not_bool.cps
for (let i: integer = 0; 3; i = i + 1) { } 